// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly with custom background color 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1cjx2xd-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 50%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-1cjx2xd-StyledTextAvatar e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with custom text color 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-gstjrq-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #FFFFFF;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-gstjrq-StyledTextAvatar e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-fpgk3f-StyledImg {
  height: 100%;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <img
      alt=""
      class="cache-fpgk3f-StyledImg e1frqeh81"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with lock 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-e89vgj-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f6f6f8;
  border-radius: 50%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

.cache-67zp1h-StyledIcon-sizeStyles {
  fill: #b2b6c3;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-67zp1h-StyledIcon-sizeStyles.cache-67zp1h-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-e89vgj-StyledTextAvatar e1frqeh82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-67zp1h-StyledIcon-sizeStyles"
        title="Locked"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with sentence 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1dabazh-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-1dabazh-StyledTextAvatar e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with size 1`] = `
<DocumentFragment>
  .cache-xgtog4-AvatarContainer {
  height: 48px;
  width: 48px;
}

.cache-fpgk3f-StyledImg {
  height: 100%;
  width: 100%;
}

<div
    class="cache-xgtog4-AvatarContainer e1frqeh80"
    size="48"
  >
    <img
      alt=""
      class="cache-fpgk3f-StyledImg e1frqeh81"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with small text 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1dabazh-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-1dabazh-StyledTextAvatar e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1dabazh-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #ffffff;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-1dabazh-StyledTextAvatar e1frqeh82"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text and custom style 1`] = `
<DocumentFragment>
  .cache-hjx5aa-AvatarContainer {
  height: 32px;
  width: 32px;
}

.cache-1dmd3xz-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: red;
  border-radius: 50%;
  color: white;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-hjx5aa-AvatarContainer e1frqeh80"
    size="32"
  >
    <span
      class="cache-1dmd3xz-StyledTextAvatar e1frqeh82"
    >
      HW
    </span>
  </div>
</DocumentFragment>
`;

exports[`Avatar renders correctly with text size 1`] = `
<DocumentFragment>
  .cache-1yyml98-AvatarContainer {
  height: 50px;
  width: 50px;
}

.cache-qdcgyh-StyledTextAvatar {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #a365f6;
  border-radius: 50%;
  color: #ffffff;
  font-size: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
}

<div
    class="cache-1yyml98-AvatarContainer e1frqeh80"
    size="50"
  >
    <span
      class="cache-qdcgyh-StyledTextAvatar e1frqeh82"
    >
      HE
    </span>
  </div>
</DocumentFragment>
`;
